--- a/index.html
+++ b/index.html
@@ -95,12 +95,42 @@
       .list-leave-active {
         position: absolute; 
       }
+
+      /* Custom animations */
+      @keyframes sheen {
+        0% { transform: translateX(-100%) skewX(-15deg); }
+        100% { transform: translateX(200%) skewX(-15deg); }
+      }
+      .animate-sheen {
+        animation: sheen 2.5s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+      }
+
+      .metal-brush {
+        background-image: 
+          linear-gradient(90deg, 
+            rgba(255,255,255,0) 0%, 
+            rgba(255,255,255,0.05) 15%, 
+            rgba(0,0,0,0.05) 30%, 
+            rgba(255,255,255,0.05) 45%, 
+            rgba(0,0,0,0.05) 60%, 
+            rgba(255,255,255,0.05) 75%, 
+            rgba(255,255,255,0) 100%
+          ),
+          repeating-linear-gradient(90deg,
+            transparent 0,
+            transparent 2px,
+            rgba(0,0,0,0.02) 2px,
+            rgba(0,0,0,0.02) 4px
+          );
+        background-size: 200% 100%, 4px 4px;
+      }
     </style>
     <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-   "react": "https://aistudiocdn.com/react@^19.2.0",
+    "@/": "./",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
